# workshop-webscraping-mercadolivre

./: .gitignore  pyproject.toml
coleta/coleta/spiders/: mercadolivre.py
src/coleta/: settings.py
src/coleta/spiders/: mercadolivre.py
src/dashboard/: app.py
src/transform/: main.py
