[tool.poetry]
name = "workshop-webscraping-mercadolivre"
version = "0.1.0"
description = ""
authors = ["Breno Mendes <b.mendesbernardo2020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.34.0"
Scrapy = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
